apply plugin: 'com.android.application'
apply plugin: 'realm-android'


repositories {
    maven {
        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
    }
}

android {
    compileSdkVersion 26
    buildToolsVersion '26.0.2'
    defaultConfig {
        applicationId "com.dicoding.course.cataloguemoviempv"
        minSdkVersion 15
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        //multiDex, @TODO(max dexCount)
        multiDexEnabled true

        buildConfigField "int", "LIMIT", "100"
        buildConfigField "int", "CACHETIME", "432000" // 5days
        buildConfigField("String", "IMAGE_URL", "\"http://image.tmdb.org/t/p/w185\"")
        buildConfigField("String", "MAIN_URL", "\"http://api.themoviedb.org/\"")
        buildConfigField("String", "API_KEY", "\"e3ea2cdc09b8b8695cedb54c0e54affd\"")
        buildConfigField("String", "PROFIL_URL", "\"https://lh3.googleusercontent.com/0GRwq5mC_qRKVY9Sthgj6GaonSf5J1al7l1jbFwrdTiSIWlhJ-5h3v5E8SgASLBhzGuGrbpgHETUUnPNs0JlJufBaCZjfGOMRmFGFKmbrwDiOltOzIJbxT0Ktsg5qqKbB_hlekBIYidbhKQrf_qIt2z_p9meEkUmwp9IqhtAZaKxev3yl9dJ0LG4foHfDkg8vAWJ8gsksMBKD34BwM6oZr-kHlIC8MzAnDnaejkKh3FJW6DZrE2Klo1VILaUzlvAcmTO77msU_RPfcT00yzJkyaweSTUU__ExkSCsl0nd50wiNj4_UTYBu4gOIVRI2OOUj__vMaNnWunrnoG_K-rYKhBAn08fyLo1Rube5gZwz-790HAnSzxwbbFDrcHPhzewK6XOFKKiSUnEsq0Un8sByJNLwSu2yp_m5VZ_ePJysPYYMij8MVCbzm82m9iNs3LNmR5hy6QEXvv_C5XOIIoqLdQh6vmFXKUaMOyKFXh0jrvPhr6Iogo9DbfgibAc7j7riaWOJcyfhZ77AiUtE8Go8z0lS4DKy4-kVE2eF4MDD5LyHymXnLxXT_BEICn54SNTu4E2f42Y13OT4wrE8AQPYspC7zwyRwXxx1lzrxaC4pHLQXqd7lf5-p12xQcmcxGUsDUOQp6REL07pT9euhDLa4D5JcGq130wj0=w662-h896-no\"")

    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            debug {
                testCoverageEnabled true
            }
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })

    implementation 'com.android.support:appcompat-v7:26.0.0'
    implementation 'com.android.support:cardview-v7:26.0.0'
    implementation 'com.android.support:support-v4:26.0.0'
    implementation 'com.android.support:design:26.0.0'
    implementation 'de.hdodenhof:circleimageview:2.1.0'
    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
    implementation 'com.android.support:recyclerview-v7:26.0.0'

    implementation 'com.jakewharton:butterknife:8.8.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'

    implementation 'com.github.bumptech.glide:glide:3.7.0'


    implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'

    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'

    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
    implementation 'com.jakewharton.timber:timber:4.5.1'
    implementation 'com.android.support:preference-v7:26.0.0'
    compileOnly 'javax.annotation:jsr250-api:1.0'

    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
    implementation 'com.google.dagger:dagger:2.9'

    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
    implementation 'com.facebook.stetho:stetho:1.5.0'
    implementation 'com.uphyca:stetho_realm:2.1.0'

    implementation 'com.github.arimorty:floatingsearchview:2.0.3'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-core:1.10.19'
    compileOnly 'org.glassfish:javax.annotation:10.0-b28'

}
